Fix position of buttonbar and fix inline rendering that causes page jump

--- a/extension/skin/keymanager.css
+++ b/extension/skin/keymanager.css
@@ -34,7 +34,6 @@ body{
   border:none;
   background-image:none;
   position:absolute;
-  left:350px;
 }
 @-moz-document url-prefix() {
   #webpg-buttonbar {
